--- a/src/components/partner/PartnerHeader.module.css
+++ b/src/components/partner/PartnerHeader.module.css
@@ -346,8 +346,7 @@
   }
 
   .iconLink,
-  .chatIconLink,
-  .loginButton {
+  .chatIconLink {
     display: none;
   }
 
